<resources>
    <string name="app_name">trainticket</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>


    <string name="text_split_city">⇌</string>

    <!--researve page-->
    <string name="title">－ Ticket －</string>
    <string name="base">base</string>
    <string name="termini">termini</string>
    <string name="start_date">start date</string>
    <string name="start_time">start time</string>
    <string name="student">student</string>
    <string name="seat_type_tag">seat type:</string>


    <string name="box_train_type_all">All</string>
    <string name="box_train_type_GD">G/D</string>
    <string name="box_train_type_G">G</string>
    <string name="box_train_type_D">D</string>
    <string name="box_train_type_Z">Z</string>
    <string name="box_train_type_T">T</string>
    <string name="box_train_type_K">K</string>
    <string name="id_card">Id Card: </string>

    <!-- path detail-->
    <string name="early_time_fid">start time</string>
    <string name="total_time_fid">travel time</string>
    <string name="arrive_time_fid">arrive time</string>
    <string name="select_fid">select</string>
    <string name="no_trip_line">no that trip line</string>


    <string name="btn_yesterday">day before</string>
    <string name="btn_tomorrow">day after</string>
    <string name="time_table">time table</string>


    <string name="text_split_station">---------></string>

    <!--time table page-->
    <string name="loading_data">loading data...</string>
    <string name="earliest_start">Start</string>
    <string name="earliest_arrival">Arri</string>
    <string name="table_search">search</string>
    <string name="text_start_station">start：</string>
    <string name="text_arrive_station">arr：</string>
    <string name="text_char_split_station">direction</string>

    <!--ticket info page-->
    <string name="add_adult">Add Adult</string>
    <string name="add_children">Add Children</string>
    <string name="contact">Contact</string>
    <string name="use_current_account">use current account to buy ticket</string>
    <string name="submit_order">Submit Order</string>
    <string name="notice">Please read before buying.</string>
    <string name="notice_reserve">Notice of reservation</string>
    <string name="add_passenger">Add Passenger</string>
    <string name="refresh_passenger">Refresh passengers</string>
    <string name="no_user_under_the_account">There are no common contacts under this account.</string>
    <string name="cancel_add_ps">Cancel</string>
    <string name="sure_add_ps">Sure</string>


    <!--add passenger page-->
    <string name="passenger_name">Name</string>
    <string name="name_desc">Name of the document</string>
    <string name="document_type">Document Type</string>
    <string name="document_desc">ID card</string>
    <string name="document_num">Document Number</string>
    <string name="document_num_desc">Please enter the ID number.</string>
    <string name="phone_num">Phone Num</string>
    <string name="phone_num_desc">Please enter your phone number.</string>
    <string name="passenger_type">Passenger type</string>
    <string name="passenger_type_desc">Adult ticket</string>
    <string name="add_passengers">Add Passenger</string>
    <string name="no_cantact">no cantact info</string>


    <!--order detail Page-->
    <string name="site_lock_tip1">Seat Locking Successfully, Please pay withs</string>

    <!--register-->
    <string name="register_user_name">User name</string>
    <string name="edit_account_password">Password</string>
    <string name="edit_repeat_password">Password again</string>
    <string name="edit_user_name">User name</string>
    <string name="edit_id_card">ID card</string>
    <string name="edit_phone_number">Telephone number</string>
    <!--发车表-->


    <!--order list page-->
    <string name="no_order_info">no order inforamtion</string>
    <string name="pull_to_refresh">pull to refresh</string>





    <string name="menu_refresh">刷新</string>
    <string name="menu_filter">筛选</string>
    <string name="menu_complete">完成</string>
    <string name="menu_add">添加</string>
    <string name="text_filter_start_date">出发日期：</string>
    <string name="text_filter_start_time">开车时段：</string>
    <string name="text_filter_arrive_time">到站时段：</string>
    <string name="text_split_time">--</string>
    <string name="box_is_start">始发</string>
    <string name="box_is_end">终到</string>
    <string name="text_filter_seat_type">席别类型：</string>
    <string name="text_filter_train_type">列车类型：</string>


    <string name="text_memory_path">常用路线：</string>

    <string name="text_memory_cities">常用城市：</string>
    <string name="text_no_memory_cities">暂无常用城市</string>
    <string name="text_query_result">查询结果：</string>
    <string name="text_no_query_result">暂无查询城市</string>

    <string name="text_no_paths">没有符合查询条件的路线</string>


    <string name="btn_no_seat">无座</string>
    <string name="btn_hard_seat">硬座</string>
    <string name="btn_soft_seat">软座</string>
    <string name="btn_hard_bed">硬卧</string>
    <string name="btn_soft_bed">软卧</string>
    <string name="btn_advanced_soft_bed">高软</string>
    <string name="btn_second_seat">二等</string>
    <string name="btn_first_seat">一等</string>
    <string name="btn_business_seat">商务</string>
    <string name="btn_special_seat">特等</string>



    <string name="btn_only_have">只显示可购买车次</string>

    <string name="btn_clear_all_filter">清空所有过滤条件</string>

    <string name="text_station_number">站序</string>
    <string name="text_station_name">站名</string>
    <string name="text_arrive_time">到时</string>
    <string name="text_start_time">发时</string>
    <string name="text_stay_time">停留</string>

    <string name="btn_start_time_table">发车表</string>
    <string name="btn_arrive_time_table">到站表</string>

    <string name="search_time_table">搜索</string>

    <string name="text_wait_stations">请稍等，正在获取该城市下的车站</string>

    <string name="text_click_tip">请选择一个车站</string>

    <string name="btn_add_passenger">添加一名乘客</string>

    <string name="text_account_name">账户名：</string>
    <string name="text_user_name">持有人：</string>

    <string name="edit_account_name">账户名</string>
    <string name="edit_cannot_account_name">账户名（不可修改）</string>


    <string name="edit_cannot_user_name">真实姓名（不可修改）</string>
    <string name="edit_cannot_id_card">身份证号（不可修改）</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="btn_go_sign_up">去注册</string>

    <string name="text_net_error_tip">好像连不上服务器，稍后再试试？</string>
    <string name="text_account_error_tip">用户不存在或者密码错误，请重新登陆</string>

    <string name="btn_sign">Sign In/Sign Up</string>

    <string name="text_no_frequent">暂时没有常用联系人信息</string>

    <string name="text_left_time">剩余支付时间:</string>

    <string name="text_tip">温馨提示：</string>
    <string name="text_today">今天是</string>
    <string name="text_today_after">，起售停售时间为：</string>
    <string name="text_every_day">1.每日起售时间：</string>
    <string name="text_every_day_after">，停售时间：</string>
    <string name="text_last_sale_date">2.可购票的最远日期为：</string>

    <string name="text_tencent_news">腾讯新闻</string>
    <string name="text_baidu_map">百度地图</string>
    <string name="text_tuniu">途牛旅游</string>
    <string name="text_china_weather">中国天气网</string>

    <string name="text_company">复旦大学软件学院</string>
    <string name="text_student_number">18212010064</string>
    <string name="text_author">刘德卫</string>
    <string name="image_read"> </string>


</resources>
