<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_user_name">

            <EditText
                android:id="@+id/userName_sid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/userPwd_sid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_account_password"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/userPwd_btn_sid"
                style="@style/NormalButton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="5dp"
                android:background="@drawable/ic_eye_unpressed"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/re_userPwd_sid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_repeat_password"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/re_userPwd_btn_sid"
                style="@style/NormalButton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="5dp"
                android:background="@drawable/ic_eye_unpressed"
                android:visibility="gone" />

        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/userRealName_sid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_user_name"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ic_card_sid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789xX"
                android:hint="@string/edit_id_card"
                android:inputType="number"
                android:maxLength="18"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/userPhone_sid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_phone_number"
                android:inputType="phone"
                android:maxLength="30"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/signin_btn_sid"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="#fff"
            android:textSize="18sp"
            android:text="REGISTER"/>


        <!--<com.dd.CircularProgressButton-->
            <!--android:id="@+id/signin_btn_sid"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
            <!--android:textColor="#fff"-->
            <!--android:textSize="18sp"-->
            <!--app:cpb_cornerRadius="15dp"-->
            <!--app:cpb_textIdle="注册" />-->
    </LinearLayout>

</LinearLayout>